[gd_scene load_steps=51 format=2]

[ext_resource path="res://Player1.gd" type="Script" id=1]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-idle-2-00-1.3.png" type="Texture" id=2]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-attack1-00-1.3.png" type="Texture" id=3]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-idle-2-03-1.3.png" type="Texture" id=4]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-run-00-1.3.png" type="Texture" id=5]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-attack1-03-1.3.png" type="Texture" id=6]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-attack1-01-1.3.png" type="Texture" id=7]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-run-02-1.3.png" type="Texture" id=8]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-run-03-1.3.png" type="Texture" id=9]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-idle-2-01-1.3.png" type="Texture" id=10]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-attack1-04-1.3.png" type="Texture" id=11]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-attack1-02-1.3.png" type="Texture" id=12]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-idle-2-02-1.3.png" type="Texture" id=13]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-run-05-1.3.png" type="Texture" id=14]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-run-04-1.3.png" type="Texture" id=15]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-run-01-1.3.png" type="Texture" id=16]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-jump-00-1.3.png" type="Texture" id=17]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-jump-02-1.3.png" type="Texture" id=18]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-jump-03-1.3.png" type="Texture" id=19]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-jump-01-1.3.png" type="Texture" id=20]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-fall-00-1.3.png" type="Texture" id=21]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-fall-01-1.3.png" type="Texture" id=22]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-die-06-1.3.png" type="Texture" id=23]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-die-01-1.3.png" type="Texture" id=24]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-die-00-1.3.png" type="Texture" id=25]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-die-02-1.3.png" type="Texture" id=26]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-die-04-1.3.png" type="Texture" id=27]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-die-03-1.3.png" type="Texture" id=28]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-die-05-1.3.png" type="Texture" id=29]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-hurt-00-1.3.png" type="Texture" id=30]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-hurt-01-1.3.png" type="Texture" id=31]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-hurt-02-1.3.png" type="Texture" id=32]
[ext_resource path="res://LifeCounter.gd" type="Script" id=33]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-slide-00-1.3.png" type="Texture" id=34]
[ext_resource path="res://GameAssets/Players/Individual Sprites/adventurer-bow-08.png" type="Texture" id=35]
[ext_resource path="res://GameAssets/Players/Individual Sprites/adventurer-bow-05.png" type="Texture" id=36]
[ext_resource path="res://GameAssets/Players/Individual Sprites/adventurer-bow-04.png" type="Texture" id=37]
[ext_resource path="res://GameAssets/Players/Individual Sprites/adventurer-bow-07.png" type="Texture" id=38]
[ext_resource path="res://GameAssets/Players/Individual Sprites/adventurer-bow-jump-02.png" type="Texture" id=39]
[ext_resource path="res://GameAssets/Players/Individual Sprites/adventurer-bow-jump-03.png" type="Texture" id=40]
[ext_resource path="res://GameAssets/Players/Individual Sprites/adventurer-bow-jump-04.png" type="Texture" id=41]
[ext_resource path="res://GameAssets/Players/Individual Sprites/adventurer-bow-jump-01.png" type="Texture" id=42]
[ext_resource path="res://GameAssets/Players/Individual Sprites/adventurer-bow-jump-05.png" type="Texture" id=43]
[ext_resource path="res://GameAssets/Players/Individual Sprites/adventurer-bow-02.png" type="Texture" id=46]
[ext_resource path="res://GameAssets/Players/Individual Sprites/adventurer-bow-00.png" type="Texture" id=47]
[ext_resource path="res://GameAssets/Players/Individual Sprites/adventurer-bow-jump-00.png" type="Texture" id=49]
[ext_resource path="res://GameAssets/Players/Indvidual Sprites/adventurer-slide-01-1.3.png" type="Texture" id=50]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 23 ) ],
"loop": false,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ), null, ExtResource( 31 ), null, ExtResource( 32 ) ],
"loop": true,
"name": "Hurt",
"speed": 4.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 46 ), ExtResource( 37 ), ExtResource( 36 ), ExtResource( 38 ), ExtResource( 35 ) ],
"loop": true,
"name": "Bow",
"speed": 30.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": false,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 50 ) ],
"loop": true,
"name": "Slide",
"speed": 5.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 42 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 43 ) ],
"loop": true,
"name": "JumpBow",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 11 ) ],
"loop": true,
"name": "Attack",
"speed": 16.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 14 ) ],
"loop": true,
"name": "Run",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.8975, 22.3438 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.0207, 25.4469 )

[node name="Player1" type="KinematicBody2D"]
position = Vector2( 29.8206, 58.6822 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 16.7248, -12.5436 )
scale = Vector2( 1.66899, 1.65424 )
frames = SubResource( 1 )
animation = "Idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 15.8211, -5.53034 )
shape = SubResource( 2 )

[node name="AttackArea" type="Area2D" parent="." groups=[
"sword",
]]
position = Vector2( 45.7315, -4.16048 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -2.30562, -11.3383 )
shape = SubResource( 3 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -9.04398, 10.5513 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = -190
limit_right = 8000
limit_bottom = 250

[node name="FreeFrames" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="LifeCounter" type="Label" parent="."]
margin_left = -11.5042
margin_top = -48.7867
margin_right = 81.4958
margin_bottom = -12.7867
text = "Life : "
autowrap = true
script = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 31.3316, -7.83291 )

[node name="FreezeTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="FreeFrames" to="." method="_on_FreeFrames_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
